--- a/FoxPro9Add-on.html
+++ b/FoxPro9Add-on.html
@@ -11,11 +11,8 @@
 <p>BY USING THE SOFTWARE, YOU ACCEPT THESE TERMS.  IF YOU DO NOT ACCEPT THEM, DO NOT USE THE SOFTWARE.</p>
 <p>If you comply with these license terms, you have the rights below.</p>
 <ol>
-	<li>
-		<p>INSTALLATION AND USE RIGHTS.  You may install and use any number of copies of the software on your devices to design, develop and test your programs.</p>
-	</li>
-	<li>
-		<p>ADDITIONAL LICENSING REQUIREMENTS AND/OR USE RIGHTS.</p>
+	<li>INSTALLATION AND USE RIGHTS.  You may install and use any number of copies of the software on your devices to design, develop and test your programs.</li>
+	<li>ADDITIONAL LICENSING REQUIREMENTS AND/OR USE RIGHTS.
 		<ol type="a">
 			<li>
 				Distributable Code.  The software contains code that you are permitted to distribute in programs you develop if you comply with the terms below.
